# local-ai-newsletter

./: .env  .env.txt  .gitignore  README.md  ai_newsletter.md  ai_newsletter_v2.md  daily_newsletter.md  emailer py backup.py  launcher.ps1  main.py  newsletter_v3.html  pipeline_log.txt  pyproject.toml  run_pipeline_v3.bat  setup_structure.py  writer py backup.py
config/: sources.yaml
data/: news_v3.db  newsletter.db
docs/: AI_Newsletter_Plan.docx  AI_Newsletter_Plan_v2.docx  Automated AI Newsletter Project Documentation_HighLevel.docx  Expanded Project Documentation.docx  Master_Class_BR.docx  Option_1_2_3.docx  Plan_C.docx  Plan_G.docx  Plan_P.docx  generate_plan.py  generate_updated_plan.py  ~$panded Project Documentation.docx  ~$ster_Class_BR.docx  ~$tomated AI Newsletter Project Documentation_HighLevel.docx  ~WRL3936.tmp
src/: ai_processor.py  ai_processor_v3.py  database.py  database_v3.py  emailer.py  emailer_v2.py  emailer_v3.py  fetcher.py  fetcher_v3.py  generator.py  maintanance_v3.py  writer.py  writer_v2.py  writer_v3.py  writer_v3_old.py
